# geyser-grpc-plugin

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  f  release  rust-toolchain.toml  rust-version.sh  s
.codex/skills/release-rebase/: SKILL.md
.codex/skills/release-rebase/agents/: openai.yaml
.github/actions/setup-rust/: action.yaml
.github/workflows/: build.yaml  ci.yaml  clean_code.yaml  master.yaml  pr.yaml  push_artifacts.yaml  release.yaml  test.yaml
cli/: Cargo.toml  README.md
cli/src/: main.rs
client/: Cargo.toml  build.rs
client/src/: geyser_consumer.rs  interceptor.rs  lib.rs  types.rs
proto/: Cargo.toml  README.md  build.rs  geyser.proto
proto/proto/: confirmed_block.proto  entries.proto  geyser.proto  transaction_by_addr.proto
proto/src/: convert.rs  lib.rs
server/: Cargo.toml  build.rs  example-config.json
server/src/: accounts_selector.rs  compact_timestamp.rs  geyser_grpc_plugin.rs  lib.rs  server.rs  subscription_stream.rs
