[workspace]
members = [
    "cli",
    "client",
    "proto",
    "server"
]

[workspace.package]
version = "0.1.0"
authors = ["Jito Foundation Maintainers <team@jito.netwokr>"]
repository = "https://github.com/jito-foundation/geyser-grpc-plugin"
homepage = "https://jito.network/"
license = "Apache-2.0"
edition = "2021"
publish = false

[workspace.dependencies]
aes-gcm-siv = "0.10.3"
bincode = "1.3.3"
bs58 = "0.4.0"
clap = { version = "=4.0.32", features = ["derive", "env"] } # keep old clap. newer version needs rustc 1.64+
clap_lex = "=0.3.0" # manual dep override for clap.
crossbeam-channel = "0.5.8"
futures-util = "0.3.28"
geyser-grpc-plugin-client = { path = "client" }
jito-geyser-protos = { path = "proto" }
log = "0.4"
lru = "0.8" # keep old version due to MSRV of 1.60
once_cell = "1.17.1"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
rand = "0.8"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
solana-account-decoder = "1.16.17"
solana-geyser-plugin-interface = "1.16.17"
solana-logger = "1.16.17"
solana-metrics = "1.16.17"
solana-program = "1.16.17"
solana-sdk = "1.16.17"
solana-transaction-status = "1.16.17"
solana-vote-program = "1.16.17"
thiserror = "1.0.40"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
toml_datetime = "=0.6.0" # manual dep override for clap.
tonic = "0.9.2"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
tonic-build = "0.9.2"
