[workspace]
members = [
    "cli",
    "client",
    "proto",
    "server"
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "3.0.2"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]
edition = "2021"
repository = "https://github.com/jito-foundation/geyser-grpc-plugin"
homepage = "https://jito.network/"

[workspace.dependencies]
agave-geyser-plugin-interface = "=3.0"
bincode = "1.3.3"
bs58 = "0.5.0"
clap = { version = "4.4.6", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
enum-iterator = "2.1.0"
futures-util = "0.3.28"
geyser-grpc-plugin-client = { path = "client", version = "=3.0" }
jito-geyser-protos = { path = "proto", version = "=3.0" }
log = "0.4.17"
lru = "0.13.0"
once_cell = "1.17.1"
prost = "0.13.5"
prost-types = "0.13.5"
protobuf-src = "1.1.0+21.5"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
serde_with = "=3.12.0"
solana-account-decoder = "3.0"
solana-clock = "3.0"
solana-hash = "3.0"
solana-instruction = "3.0"
solana-logger = "3.0"
solana-message = "3.0"
solana-metrics = "3.0"
solana-program = "3.0"
solana-pubkey = "3.0"
solana-serde = "3.0"
solana-signature = "3.0"
solana-slot-hashes = "3.0"
solana-transaction = "3.0"
solana-transaction-context = "3.0"
solana-transaction-error = "3.0"
solana-transaction-status = "3.0"
solana-vote-program = "3.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots", "tls-webpki-roots"] }
tonic-build = "0.12.3"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
