[package]
name = "jito-geyser-cli"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
futures-util = { workspace = true }
geyser-grpc-plugin-client = { workspace = true }
jito-geyser-protos = { workspace = true }
prost-types = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
