[package]
name = "geyser-grpc-plugin-client"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
jito-geyser-protos = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
solana-clock = {workspace = true }
solana-pubkey = {workspace = true }
solana-slot-hashes = {workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
