[package]
name = "jito-geyser-protos"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Jito's Solana geyser protobufs and helper libraries"

[dependencies]
bincode = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
solana-account-decoder = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-serde = { workspace = true }
solana-signature = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-context = { workspace = true }
solana-transaction-error = { workspace = true }
solana-transaction-status = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
protobuf-src = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
bs58 = { workspace = true }
enum-iterator = { workspace = true }
