[package]
name = "geyser-grpc-plugin-server"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5.8"
futures-util = "0.3.28"
jito-geyser-protos = { path = "../proto" }

jito-solana-geyser-plugin-interface = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.17-jito", package = "solana-geyser-plugin-interface", optional = true }
jito-solana-logger = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.17-jito", package = "solana-logger", optional = true }
jito-solana-metrics = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.17-jito", package = "solana-metrics", optional = true }
jito-solana-program = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.17-jito", package = "solana-program", optional = true }
jito-solana-sdk = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.17-jito", package = "solana-sdk", optional = true }
jito-solana-vote-program = { git = "https://github.com/jito-foundation/jito-solana.git", tag = "v1.14.17-jito", package = "solana-vote-program", optional = true }
log = "0.4.17"
once_cell = "1.17.1"
prost = "0.11.9"
prost-types = "0.11.9"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"

solana-geyser-plugin-interface = "~1.14"
solana-logger = "~1.14"
solana-metrics = "~1.14"
solana-program = "~1.14"
solana-sdk = "~1.14"
solana-transaction-status = "~1.14"
solana-vote-program = "~1.14"

thiserror = "1.0.40"
tokio = { version = "~1.14.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.9.2"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }

[features]
jito-solana = ["jito-solana-geyser-plugin-interface", "jito-solana-logger", "jito-solana-metrics", "jito-solana-program", "jito-solana-sdk", "jito-solana-vote-program"]

[build-dependencies]
tonic-build = "0.9.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
