[package]
name = "geyser-grpc-plugin-server"
version = { workspace = true }
license =  { workspace = true }
authors =  { workspace = true }
edition =  { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
jito-geyser-protos = { workspace = true  }
jito-solana-geyser-plugin-interface = { workspace = true, optional = true }
jito-solana-logger = { workspace = true, optional = true }
jito-solana-metrics = { workspace = true, optional = true }
jito-solana-program = { workspace = true, optional = true }
jito-solana-sdk = { workspace = true, optional = true }
jito-solana-vote-program = { workspace = true, optional = true }
log = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-geyser-plugin-interface = { workspace = true }
solana-logger = { workspace = true }
solana-metrics = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-vote-program = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build =  { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
jito-solana = ["jito-solana-geyser-plugin-interface", "jito-solana-logger", "jito-solana-metrics", "jito-solana-program", "jito-solana-sdk", "jito-solana-vote-program"]